basket icon mobile, tentmodal fix

--- a/src/components/Tickets/TentOptions/TentOptionsModal/_TentOptionsModal.scss
+++ b/src/components/Tickets/TentOptions/TentOptionsModal/_TentOptionsModal.scss
@@ -28,6 +28,7 @@
 		}
 
 		p {
+			font-family: $secondary-font;
 			text-align: start;
 
 			&:not(:last-child) {
